@@ -4,6 +4,7 @@ sunuo (0.1.8) unstable; urgency=low
     - a second Dispose() call continues with FinishDispose()
     - call FinishDispose() in CheckAlive()
   * remove duplicate data directories
+  * replaced World.MultiProcessor by Core.Config.MultiThreading
 
  --
 
